--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,10 @@
+html {
+  font-size: 16px;
+  /* font-family: "Inter", sans-serif; */
+  font-family: "Inknut Antiqua", serif;
+  /* font-family: "Times New Roman", Times, serif; */
+}
+
 :is(.toc a):hover {
   color: #b8bb26; /* because the default is --color-nutural for some reason */
   background-color: initial;
@@ -12,7 +19,7 @@
   overflow-y: visible;
 }
 .w-36 {
-  width: 20rem !important;
+  width: 24vh !important;
   border-radius: 0.375rem !important;
 }
 
@@ -49,19 +56,39 @@ ul {
   border: none;
 }
 
+@media (max-height: 780px) {
+  .w-36 {
+    width: 16vh !important;
+    border-radius: 0.375rem !important;
+  }
+  .recent {
+    max-height: 25vh;
+  }
+  footer {
+    display: none;
+  }
+}
+
 @media (max-width: 1100px) {
   .recent {
     max-width: 100%;
-    height: 45vh;
+    max-height: 48vh;
     overflow-y: scroll;
     scroll-behavior: smooth;
     display: flex;
     flex-direction: column;
-    margin: 0 5rem 0 5rem;
+    /* margin: 0 5rem 0 5rem; */
   }
   .columns-2 {
     align-items: center;
     justify-content: center;
+  }
+  .recent h2 {
+    display: none;
+  }
+  footer {
+    padding-bottom: 1vh !important;
+    padding-top: 1vh !important;
   }
 }
 
