--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -82,7 +82,6 @@ footer {
     display: none;
   }
 }
-
 @media (min-width: 1100px) {
   .columns-2 {
     column-count: 2;
@@ -92,6 +91,9 @@ footer {
   }
   .w-36 {
     width: 25rem !important;
+  }
+  .recent {
+    max-width: 50%;
   }
 }
 
